--- a/mysbi/Makefile
+++ b/mysbi/Makefile
@@ -41,27 +41,33 @@ MYSBI_OBJ_FILES += $(ENTRY_C_FILES:$(MYSBI_ENTRY_DIR)/%.c=$(MYSBI_ENTRY_DIR)/%_c
 MYSBI_OBJ_FILES += $(SBI_LIB_C_FILES:$(MYSBI_LIB_DIR)/%.c=$(MYSBI_LIB_DIR)/%_c.o)
 
 mysbi: $(MYSBI_OBJ_FILES)
-	mkdir -p $(BUILD_DIR)
-	$(LD) -T $(MYSBI_DIR)/mysbi.lds -o $(BUILD_DIR)/$(SBI_TARGET) $(MYSBI_OBJ_FILES) -Map $(BUILD_DIR)/mysbi.map --no-warn-rwx-segments
-	$(RISCV_COPY) $(BUILD_DIR)/$(SBI_TARGET) -O binary $(BUILD_DIR)/$(SBI_TARGET_BIN)
+	@mkdir -p $(BUILD_DIR)
+	@$(LD) -T $(MYSBI_DIR)/mysbi.lds -o $(BUILD_DIR)/$(SBI_TARGET) $(MYSBI_OBJ_FILES) -Map $(BUILD_DIR)/mysbi.map --no-warn-rwx-segments
+	@$(RISCV_COPY) $(BUILD_DIR)/$(SBI_TARGET) -O binary $(BUILD_DIR)/$(SBI_TARGET_BIN)
 
 $(MYSBI_ENTRY_DIR)/%_s.o: $(MYSBI_ENTRY_DIR)/%.S
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
 
 $(MYSBI_ENTRY_DIR)/%_c.o: $(MYSBI_ENTRY_DIR)/%.c
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(TOPDIR)/include/gos-auto -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(TOPDIR)/include/gos-auto -c $< -o $@
 
 $(MYSBI_SBI_DIR)/%_s.o: $(MYSBI_SBI_DIR)/%.S
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
 
 $(MYSBI_SBI_DIR)/%_c.o: $(MYSBI_SBI_DIR)/%.c
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(MYSBI_DIR)/../include/gos-auto -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(MYSBI_DIR)/../include/gos-auto -c $< -o $@
 
 $(MYSBI_LIB_DIR)/%_c.o: $(MYSBI_LIB_DIR)/%.c
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -c $< -o $@
 
 $(BSP_DIR)/%_c.o: $(BSP_DIR)/%.c
-	$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(TOPDIR)/include/gos $(DEBUG) -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYSBI_DIR)/include -I$(TOPDIR)/include/gos $(DEBUG) -c $< -o $@
 
 clean:
-	rm -rf $(shell find -name "*.o")
+	@rm -rf $(shell find -name "*.o")
