--- a/Makefile.build
+++ b/Makefile.build
@@ -26,15 +26,18 @@ PHONY += $(subdir-y)
 __build: $(subdir-y) $(obj)/built-in.o
 
 $(subdir-y):
-	make -f $(TOPDIR)/Makefile.build obj=$@
+	@make -f $(TOPDIR)/Makefile.build obj=$@ 2>/dev/null
 
 $(obj)/built-in.o: $(cur_objs) $(subdir_objs)
-	$(LD) -r -o $@ $^
+	@echo "LD $@"
+	@$(LD) -r -o $@ $^
 
 %.o: %.c
-	$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos -I$(GOS_CORE_DIR)/include $(DEBUG) -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos -I$(GOS_CORE_DIR)/include $(DEBUG) -c $< -o $@
 
 %_s.o: %.S
-	$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos $(DEBUG) -c $< -o $@
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos $(DEBUG) -c $< -o $@
 
 .PHONY: $(PHONY)
