--- a/myUser/Makefile
+++ b/myUser/Makefile
@@ -31,6 +31,15 @@ USER_CORE_C_FILES = $(wildcard $(MYUSER_CORE_DIR)/*.c)
 USER_CORE_ASM_FILES = $(wildcard $(MYUSER_CORE_DIR)/*.S)
 USER_LIB_C_FILES = $(wildcard $(MYUSER_LIB_DIR)/*.c)
 USER_COMMAND_C_FILES = $(wildcard $(MYUSER_COMMAND_DIR)/*.c)
+USER_COMMAND_ASM_FILES = $(wildcard $(MYUSER_COMMAND_DIR)/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zba/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zba/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbb/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbb/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.S)
 
 MYUSER_OBJ_FILES = $(USER_ENTRY_ASM_FILES:$(MYUSER_ENTRY_DIR)/%.S=$(MYUSER_ENTRY_DIR)/%_s.o)
 MYUSER_OBJ_FILES += $(USER_ENTRY_C_FILES:$(MYUSER_ENTRY_DIR)/%.c=$(MYUSER_ENTRY_DIR)/%_c.o)
@@ -38,6 +47,7 @@ MYUSER_OBJ_FILES += $(USER_CORE_ASM_FILES:$(MYUSER_CORE_DIR)/%.S=$(MYUSER_CORE_D
 MYUSER_OBJ_FILES += $(USER_CORE_C_FILES:$(MYUSER_CORE_DIR)/%.c=$(MYUSER_CORE_DIR)/%_c.o)
 MYUSER_OBJ_FILES += $(USER_LIB_C_FILES:$(MYUSER_LIB_DIR)/%.c=$(MYUSER_LIB_DIR)/%_c.o)
 MYUSER_OBJ_FILES += $(USER_COMMAND_C_FILES:$(MYUSER_COMMAND_DIR)/%.c=$(MYUSER_COMMAND_DIR)/%_c.o)
+MYUSER_OBJ_FILES += $(USER_COMMAND_ASM_FILES:$(MYUSER_COMMAND_DIR)/%.S=$(MYUSER_COMMAND_DIR)/%_s.o)
 
 myUser: $(MYUSER_OBJ_FILES)
 	@mkdir -p $(BUILD_DIR)
@@ -65,6 +75,9 @@ $(MYUSER_LIB_DIR)/%_c.o: $(MYUSER_LIB_DIR)/%.c
 	@$(CC) $(COPS) -I$(MYUSER_DIR)/include -I$(TOPDIR)/include/uapi -c $< -o $@
 
 $(MYUSER_COMMAND_DIR)/%_c.o: $(MYUSER_COMMAND_DIR)/%.c
+	@echo "CC $@"
+	@$(CC) $(COPS) -I$(MYUSER_DIR)/include -I$(TOPDIR)/include/uapi -c $< -o $@
+$(MYUSER_COMMAND_DIR)/%_s.o: $(MYUSER_COMMAND_DIR)/%.S
 	@echo "CC $@"
 	@$(CC) $(COPS) -I$(MYUSER_DIR)/include -I$(TOPDIR)/include/uapi -c $< -o $@
 
