Support running multiple user on a cpu.
You can use command "user_run_ext" to create more than one users.
Its usage is the same as user_run, and every time "user_run_ext"
is called, a user will be created and run on this cpu.

The user subsystem of gos will allocate uesrid itself, and the log of
a user has a prefix of "[User%d on cpu%d log]".

Such as:
[User0 on cpu0 log] XXXXX —— the log of user0 on cpu0
[User1 on cpu0 log] XXXXX —— the log of user1 on cpu0
Usage: user_run_ext [cpuid] [cmd] [params1] [params2] ...

Ps. The usage of user_run remains unchanged. It only creates a user
when there is no existing user on the cpu, and it will return the
first user when there is a user on the cpu.

Meanwhile, add command: user_run_ext_at
Usage: vcpu_run_ext_at cpu=[cpuid] userid=[userid] [cmd] [params1] [params2] ...
Run command on the user identitfied by userid on cpu identitfied by cpuid.

Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -34,6 +34,12 @@ config APP_TASK_INFO
 config APP_USER_RUN
 	bool "APP_USER_RUN"
 	depends on USER
+config APP_USER_RUN_EXT
+	bool "APP_USER_RUN_EXT"
+	depends on USER
+config APP_USER_INFO
+	bool "APP_USER_INFO"
+	depends on USER
 config APP_VCPU_RUN
 	bool "APP_VCPU_RUN"
 	depends on VIRT
