--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -27,6 +27,8 @@ obj-$(CONFIG_APP_VCPU_RUN) += vcpu_run.o
 obj-$(CONFIG_APP_VCPU_RUN_EXT) += vcpu_run_ext.o
 obj-$(CONFIG_APP_VCPU_INFO) += vcpu_info.o
 obj-$(CONFIG_APP_USER_RUN) += user_run.o
+obj-$(CONFIG_APP_USER_RUN_EXT) += user_run_ext.o
+obj-$(CONFIG_APP_USER_INFO) += user_info.o
 obj-$(CONFIG_APP_PAGE_TLB_TEST) += page_tlb_test.o
 obj-$(CONFIG_APP_TASK_INFO) += task_info.o
 obj-$(CONFIG_APP_CSR_CTL) += csr_ctl.o
