--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -49,3 +49,4 @@ obj-$(CONFIG_APP_G_STAGE_TEST) += g_stage.o
 obj-$(CONFIG_APP_SVPBMT_TEST) += svpbmt_test.o
 obj-$(CONFIG_APP_SCAN_MEM_TEST) += scan_mem_test.o
 obj-$(CONFIG_APP_RESV_MEM_INFO) += reserved_mem.o
+obj-$(CONFIG_APP_CACHE_FLUSH_TEST) += cache_flush_test.o
