app: Add hpm_test
Ported from https://github.com/OpenXiangShan/nexus-am/tree/master/apps/hpmdriver/*

Signed-off-by: Ran Wang <wangran@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -102,3 +102,6 @@ config APP_SINVAL_TEST
 config APP_ZICOND_TEST
 	bool "APP_ZICOND_TEST"
 	default y
+config APP_HPM_TEST
+	bool "APP_HPM_TEST"
+	default y
