--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -52,3 +52,4 @@ obj-$(CONFIG_APP_RESV_MEM_INFO) += reserved_mem.o
 obj-$(CONFIG_APP_CACHE_FLUSH_TEST) += cache_flush_test.o
 obj-$(CONFIG_APP_SINVAL_TEST) += sinval_test.o
 obj-$(CONFIG_APP_ZICOND_TEST) += zicond_test.o
+obj-$(CONFIG_APP_HPM_TEST) += hpm_test.o
