--- a/drivers/pci/Makefile
+++ b/drivers/pci/Makefile
@@ -12,10 +12,5 @@
 # You should have received a copy of the GNU General Public License along with
 # this program.  If not, see <http://www.gnu.org/licenses/>.
 
-obj-$(CONFIG_UART) += uart/
-obj-$(CONFIG_IRQCHIP) += irqchip/
-obj-$(CONFIG_TIMER) += timer/
-obj-$(CONFIG_DMAC) += dmac/
-obj-$(CONFIG_IOMMU) += iommu/
-obj-$(CONFIG_IMSIC_TEST) += imsic-test/
-obj-$(CONFIG_PCI) += pci/
+obj-$(CONFIG_PCI) += pci.o
+obj-$(CONFIG_PCI) += controller/
