Add my_pci_dmaengine driver
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/drivers/dmac/Kconfig
+++ b/drivers/dmac/Kconfig
@@ -1,3 +1,7 @@
 config DMAC_DW_AXI_DRIVER
 	bool "DRIVER_DMAC_DW_AXI"
 	default y
+
+config DMAC_MY_PCI_DMAENGINE_DRIVER
+	bool "DRIVER_MY_PCI_DMAENGINE"
+	default y
