Support riscv-iommu(can be used in qemu)
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/drivers/iommu/riscv-iommu/Makefile
+++ b/drivers/iommu/riscv-iommu/Makefile
@@ -12,5 +12,7 @@
 # You should have received a copy of the GNU General Public License along with
 # this program.  If not, see <http://www.gnu.org/licenses/>.
 
-obj-y += dma-mapping.o
-obj-y += iova.o
+obj-$(CONFIG_RISCV_IOMMU_DRIVER) += riscv-iommu.o
+obj-$(CONFIG_RISCV_IOMMU_DRIVER) += io_pgtable.o
+#obj-$(CONFIG_RISCV_IOMMU_DRIVER) += queue.o
+#obj-$(CONFIG_RISCV_IOMMU_DRIVER) += iommu_test.o
