Support device pass through to vm (interrupt remapping is ToDo...)
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/Makefile.build
+++ b/Makefile.build
@@ -34,7 +34,7 @@ $(obj)/built-in.o: $(cur_objs) $(subdir_objs)
 
 %.o: %.c
 	@echo "CC $@"
-	@$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos -I$(GOS_CORE_DIR)/include $(DEBUG) -c $< -o $@
+	@$(CC) $(COPS) -I$(TOPDIR)/include/ -I$(TOPDIR)/include/gos -I$(GOS_CORE_DIR)/include -I$(TOPDIR)/include/generic $(DEBUG) -c $< -o $@
 
 %_s.o: %.S
 	@echo "CC $@"
