--- a/virt/Makefile
+++ b/virt/Makefile
@@ -19,6 +19,7 @@ obj-$(CONFIG_VIRT) += memory_emulator.o
 obj-$(CONFIG_VIRT) += uart_emulator.o
 obj-$(CONFIG_VIRT) += memory_test_emulator.o
 obj-$(CONFIG_VIRT) += scheduler_emulator.o
+obj-$(CONFIG_VIRT_ENABLE_PCI_GENERIC) += pci_generic_emulator.o
 obj-$(CONFIG_VIRT) += vcpu_insn.o
 obj-$(CONFIG_VIRT_ENABLE_TIMER) += vcpu_timer.o
 obj-$(CONFIG_VIRT) += virt_vm_exit.o
@@ -28,3 +29,4 @@ obj-$(CONFIG_VIRT) += vcpu_sbi.o
 obj-$(CONFIG_VIRT) += virt.o
 obj-$(CONFIG_VIRT) += cpu_tlb_s.o
 obj-$(CONFIG_VIRT) += vcpu_switch_s.o
+obj-$(CONFIG_VIRT_DEVICE_PASSTHROUGH) += vcpu_pt_remapping.o
