--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -8,11 +8,12 @@
 #
 CONFIG_APP_CSR_CTL=y
 CONFIG_APP_DEVICES=y
-# CONFIG_APP_DEVMEM is not set
-# CONFIG_APP_DMA_TEST is not set
-# CONFIG_APP_DMA_TEST_EXT is not set
+CONFIG_APP_DEVMEM=y
+CONFIG_APP_DMA_TEST=y
 CONFIG_APP_HELLO=y
 CONFIG_APP_HISTORY=y
+# CONFIG_APP_IMSIC_TEST is not set
+# CONFIG_APP_VS_IMSIC_MULTI_TEST is not set
 CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
 CONFIG_APP_PAGE_TLB_TEST=y
@@ -20,6 +21,8 @@ CONFIG_APP_PLIC_SET_AFFINITY=y
 CONFIG_APP_SPINLOCK_TEST=y
 CONFIG_APP_TASK_INFO=y
 CONFIG_APP_USER_RUN=y
+CONFIG_APP_USER_RUN_EXT=y
+CONFIG_APP_USER_INFO=y
 CONFIG_APP_VCPU_RUN=y
 CONFIG_APP_VCPU_RUN_EXT=y
 CONFIG_APP_VCPU_INFO=y
@@ -28,10 +31,23 @@ CONFIG_APP_HUGE_PAGE_TEST=y
 CONFIG_APP_TINY_TEST=y
 CONFIG_APP_PLANE=y
 CONFIG_APP_GET_PTE_TEST=y
+CONFIG_APP_SVNAPOT_TEST=y
 CONFIG_MULTICORE_TEST=y
 CONFIG_APP_FLOAT_TEST=y
-# CONFIG_APP_MEM_WALK is not set
-# CONFIG_APP_STVAL is not set
+CONFIG_APP_MEM_WALK=y
+CONFIG_APP_STVAL=y
+CONFIG_APP_CMD_LOADER=y
+CONFIG_APP_MEM_TESTER=y
+CONFIG_APP_G_STAGE_TEST=y
+CONFIG_APP_SVPBMT_TEST=y
+CONFIG_APP_SCAN_MEM_TEST=y
+CONFIG_APP_RESV_MEM_INFO=y
+CONFIG_APP_CACHE_FLUSH_TEST=y
+CONFIG_APP_SINVAL_TEST=y
+CONFIG_APP_ZICOND_TEST=y
+CONFIG_APP_HPM_TEST=y
+CONFIG_APP_LSPCI=y
+CONFIG_APP_LSDMAC=y
 # end of app
 
 #
@@ -43,7 +59,8 @@ CONFIG_APP_FLOAT_TEST=y
 # drivers
 #
 # CONFIG_DMAC is not set
-# CONFIG_IMSIC_TEST is not set
+CONFIG_IMSIC_TEST=y
+CONFIG_IMSIC_TEST_DIRVER=y
 # CONFIG_IOMMU is not set
 CONFIG_IRQCHIP=y
 
@@ -67,6 +84,7 @@ CONFIG_UART=y
 CONFIG_NS16550A=y
 CONFIG_QEMU_8250=y
 CONFIG_UARTLITE=y
+CONFIG_PCI=y
 # end of drivers
 
 #
@@ -79,8 +97,8 @@ CONFIG_TINY=y
 # CONFIG_SELECT_FPGA is not set
 CONFIG_SELECT_KMH_FPGA=y
 # CONFIG_SELECT_VCS is not set
-# CONFIG_SELECT_AIA is not set
-CONFIG_SELECT_PLIC=y
+CONFIG_SELECT_AIA=y
+# CONFIG_SELECT_PLIC is not set
 # CONFIG_SELECT_4K_DIRECT_MAPPING is not set
 CONFIG_SELECT_2M_DIRECT_MAPPING=y
 # CONFIG_SELECT_1G_DIRECT_MAPPING is not set
@@ -92,7 +110,8 @@ CONFIG_VIRT=y
 #
 # virt
 #
-# CONFIG_VIRT_ENABLE_TIMER is not set
+CONFIG_VIRT_ENABLE_TIMER=y
+CONFIG_VIRT_ENABLE_AIA=y
 # CONFIG_VIRT_UART_8250 is not set
 # CONFIG_VIRT_UART_UARTLITE is not set
 CONFIG_VIRT_UART_NS16550A=y
@@ -117,9 +136,13 @@ CONFIG_VIRT_IMSIC_BASE=0x20000000
 CONFIG_VIRT_IMSIC_LEN=0x1000
 CONFIG_VIRT_SCHEDULER_BASE=0x20000
 CONFIG_VIRT_SCHEDULER_LEN=0x1000
+# CONFIG_VIRT_ENABLE_PCI_GENERIC is not set
 CONFIG_VIRT_SELECT_SV39=y
 # CONFIG_VIRT_SELECT_SV48 is not set
 # CONFIG_VIRT_SELECT_SV57 is not set
+CONFIG_SELECT_4K_GUEST_VS_STAGE_MEM_MAPPING=y
+# CONFIG_SELECT_2M_GUEST_VS_STAGE_MEM_MAPPING is not set
+# CONFIG_SELECT_1G_GUEST_VS_STAGE_MEM_MAPPING is not set
 # end of VIRT_MACHINE
 # end of virt
 
@@ -128,6 +151,10 @@ CONFIG_MYGUEST=y
 CONFIG_MYUSER=y
 CONFIG_ENABLE_MMU=y
 CONFIG_ENABLE_SSTC=y
+CONFIG_ENABLE_SVPBMT=y
+CONFIG_ENABLE_VS_SSTC=y
+CONFIG_SVNAPOT=y
+CONFIG_ENABLE_ZICBOM=y
 CONFIG_ENABLE_MULTI_TASK=y
 CONFIG_TASK_SCHEDULER_PERIOD=20
 CONFIG_ENABLE_SHELL=y
