Modify the makefile for compiling mysbi
1.Add Support DDR start is any address and
Use CONFIG_MEM_START instead,such as DDR start
address is 0x10_0000_0000

2.Add mellite_fpga_defconfig

Usage:
 make mellite_fpga_defconfig
 make autoconf
 make mysbi_bin

Signed-off-by: Yang Wang <wangyang@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -101,3 +101,12 @@ config TASK_SCHEDULER_PERIOD
 config ENABLE_SHELL
 	bool "Enable Shell"
 	default y
+
+config MELLITE_FPGA
+	bool "Mellite fpga"
+	default n
+
+config MEM_START
+	hex "Config Mem start"
+	default 0x1000000000 if MELLITE_FPGA
+	default 0x80000000
