Add Support ns16550a
Usage:
 ./build.sh mellite

Signed-off-by: YangWang <yangx.wang@intel.com>

--- a/configs/mellite_fpga_defconfig
+++ b/configs/mellite_fpga_defconfig
@@ -64,8 +64,8 @@ CONFIG_UARTLITE=y
 CONFIG_TINY=y
 # end of Memory Management
 
-CONFIG_SELECT_QEMU=y
-# CONFIG_SELECT_FPGA is not set
+#CONFIG_SELECT_QEMU=y
+CONFIG_SELECT_FPGA=y
 # CONFIG_SELECT_KMH_FPGA is not set
 # CONFIG_SELECT_VCS is not set
 # CONFIG_SELECT_AIA is not set
