Add user rvv-test case
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/myUser/Makefile
+++ b/myUser/Makefile
@@ -40,6 +40,8 @@ USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.c)
 USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.S)
 USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.c)
 USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.S)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/vector/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/vector/*.c)
 
 MYUSER_OBJ_FILES = $(USER_ENTRY_ASM_FILES:$(MYUSER_ENTRY_DIR)/%.S=$(MYUSER_ENTRY_DIR)/%_s.o)
 MYUSER_OBJ_FILES += $(USER_ENTRY_C_FILES:$(MYUSER_ENTRY_DIR)/%.c=$(MYUSER_ENTRY_DIR)/%_c.o)
