--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -12,8 +12,8 @@ CONFIG_APP_DEVMEM=y
 CONFIG_APP_DMA_TEST=y
 CONFIG_APP_HELLO=y
 CONFIG_APP_HISTORY=y
-# CONFIG_APP_IMSIC_TEST is not set
-# CONFIG_APP_VS_IMSIC_MULTI_TEST is not set
+CONFIG_APP_IMSIC_TEST=y
+CONFIG_APP_VS_IMSIC_MULTI_TEST=y
 CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
 CONFIG_APP_PAGE_TLB_TEST=y
@@ -152,6 +152,7 @@ CONFIG_MYUSER=y
 CONFIG_ENABLE_MMU=y
 CONFIG_ENABLE_SSTC=y
 CONFIG_ENABLE_SVPBMT=y
+CONFIG_ENABLE_VECTOR=y
 CONFIG_ENABLE_VS_SSTC=y
 CONFIG_SVNAPOT=y
 CONFIG_ENABLE_ZICBOM=y
