Add command intr_test
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -113,3 +113,7 @@ config APP_LSDMAC
 config APP_STUB_TEST
 	bool "APP_STUB_TEST"
 	default y
+config APP_INTR_TEST
+	bool "APP_INTR_TEST"
+	depends on SELECT_VCS
+	default y
