--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -15,7 +15,7 @@ CONFIG_APP_HISTORY=y
 CONFIG_APP_IMSIC_TEST=y
 CONFIG_APP_VS_IMSIC_MULTI_TEST=y
 CONFIG_APP_LS=y
-# CONFIG_APP_MEM_READ is not set
+CONFIG_APP_MEM_READ=y
 CONFIG_APP_PAGE_TLB_TEST=y
 CONFIG_APP_PLIC_SET_AFFINITY=y
 CONFIG_APP_SPINLOCK_TEST=y
@@ -48,6 +48,7 @@ CONFIG_APP_ZICOND_TEST=y
 CONFIG_APP_HPM_TEST=y
 CONFIG_APP_LSPCI=y
 CONFIG_APP_LSDMAC=y
+CONFIG_APP_STUB_TEST=y
 # end of app
 
 #
