--- a/configs/minimum_defconfig
+++ b/configs/minimum_defconfig
@@ -10,18 +10,13 @@
 # CONFIG_APP_DEVICES is not set
 # CONFIG_APP_DEVMEM is not set
 # CONFIG_APP_DMA_TEST is not set
-# CONFIG_APP_DMA_TEST_EXT is not set
-# CONFIG_APP_HELLO is not set
+CONFIG_APP_HELLO=y
 # CONFIG_APP_HISTORY is not set
-# CONFIG_APP_IMSIC_TEST is not set
-# CONFIG_APP_LS is not set
+CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
-# CONFIG_APP_PAGE_TLB_TEST is not set
 # CONFIG_APP_PLIC_SET_AFFINITY is not set
 # CONFIG_APP_SPINLOCK_TEST is not set
 # CONFIG_APP_TASK_INFO is not set
-# CONFIG_APP_USER_RUN is not set
-CONFIG_APP_VCPU_RUN=y
 # CONFIG_APP_STREAM is not set
 # CONFIG_APP_HUGE_PAGE_TEST is not set
 # CONFIG_APP_TINY_TEST is not set
@@ -29,6 +24,18 @@ CONFIG_APP_VCPU_RUN=y
 # CONFIG_APP_GET_PTE_TEST is not set
 # CONFIG_MULTICORE_TEST is not set
 # CONFIG_APP_FLOAT_TEST is not set
+# CONFIG_APP_MEM_WALK is not set
+# CONFIG_APP_STVAL is not set
+# CONFIG_APP_CMD_LOADER is not set
+# CONFIG_APP_MEM_TESTER is not set
+# CONFIG_APP_G_STAGE_TEST is not set
+# CONFIG_APP_SCAN_MEM_TEST is not set
+# CONFIG_APP_RESV_MEM_INFO is not set
+# CONFIG_APP_SINVAL_TEST is not set
+# CONFIG_APP_ZICOND_TEST is not set
+# CONFIG_APP_HPM_TEST is not set
+# CONFIG_APP_LSDMAC is not set
+# CONFIG_APP_STUB_TEST is not set
 # end of app
 
 #
@@ -42,13 +49,27 @@ CONFIG_APP_VCPU_RUN=y
 # CONFIG_DMAC is not set
 # CONFIG_IMSIC_TEST is not set
 # CONFIG_IOMMU is not set
-# CONFIG_IRQCHIP is not set
+CONFIG_IRQCHIP=y
+
+#
+# aia
+#
+# CONFIG_AIA is not set
+# end of aia
+
+#
+# plic
+#
+CONFIG_PLIC=y
+# end of plic
+
 CONFIG_TIMER=y
 CONFIG_CLINT=y
 CONFIG_UART=y
-CONFIG_NS16550A=y
+# CONFIG_NS16550A is not set
 CONFIG_QEMU_8250=y
-CONFIG_UARTLITE=y
+# CONFIG_UARTLITE is not set
+# CONFIG_PCI is not set
 # end of drivers
 
 #
@@ -57,39 +78,25 @@ CONFIG_UARTLITE=y
 CONFIG_TINY=y
 # end of Memory Management
 
-# CONFIG_SELECT_QEMU is not set
+CONFIG_SELECT_QEMU=y
 # CONFIG_SELECT_FPGA is not set
 # CONFIG_SELECT_KMH_FPGA is not set
-CONFIG_SELECT_VCS=y
+# CONFIG_SELECT_VCS is not set
 # CONFIG_SELECT_AIA is not set
 CONFIG_SELECT_PLIC=y
-CONFIG_SELECT_SV39=y
-# CONFIG_SELECT_SV48 is not set
-# CONFIG_SELECT_SV57 is not set
 # CONFIG_SELECT_4K_DIRECT_MAPPING is not set
 CONFIG_SELECT_2M_DIRECT_MAPPING=y
 # CONFIG_SELECT_1G_DIRECT_MAPPING is not set
 # CONFIG_SELECT_4K_CODE_MAPPING is not set
 CONFIG_SELECT_2M_CODE_MAPPING=y
 # CONFIG_SELECT_1G_CODE_MAPPING is not set
-CONFIG_VIRT=y
-
-#
-# virt
-#
-# CONFIG_VIRT_ENABLE_TIMER is not set
-# CONFIG_VIRT_UART_8250 is not set
-CONFIG_VIRT_UART_UARTLITE=y
-# CONFIG_VIRT_UART_NS16550A is not set
-# CONFIG_SELECT_4K_GUEST_MEM_MAPPING is not set
-CONFIG_SELECT_2M_GUEST_MEM_MAPPING=y
-# CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
-# end of virt
-
-CONFIG_USER=y
-CONFIG_MYGUEST=y
-CONFIG_MYUSER=y
-CONFIG_ENABLE_MMU=y
-# CONFIG_SVNAPOT is not set
+# CONFIG_MYGUEST is not set
+# CONFIG_MYUSER is not set
+# CONFIG_ENABLE_MMU is not set
+# CONFIG_ENABLE_SSTC is not set
+# CONFIG_ENABLE_SVPBMT is not set
+# CONFIG_ENABLE_VECTOR is not set
+# CONFIG_ENABLE_ZICBOM is not set
+# CONFIG_USE_UART_POLL is not set
 # CONFIG_ENABLE_MULTI_TASK is not set
-# CONFIG_ENABLE_SHELL is not set
+CONFIG_ENABLE_SHELL=y
