Modify payload offset addr
Modify the offset addr of payload to
MEM_START+0x20000

Signed-off-by: Yang Wang <yangx.wang@intel.com>
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/mysbi/Makefile
+++ b/mysbi/Makefile
@@ -14,6 +14,8 @@
 
 # build sbi
 
+-include $(TOPDIR)/include/config/auto.conf
+
 BUILD_DIR = $(TOPDIR)/build
 MYSBI_DIR := $(shell pwd)
 
@@ -42,7 +44,11 @@ MYSBI_OBJ_FILES += $(SBI_LIB_C_FILES:$(MYSBI_LIB_DIR)/%.c=$(MYSBI_LIB_DIR)/%_c.o
 
 mysbi: $(MYSBI_OBJ_FILES)
 	@mkdir -p $(BUILD_DIR)
+ifdef CONFIG_SELECT_MELLITE_FPGA
+	@$(LD) -T $(MYSBI_DIR)/mysbi-mellite.lds --defsym $(KBUILD_CFLAGS) -o $(BUILD_DIR)/$(SBI_TARGET) $(MYSBI_OBJ_FILES) -Map $(BUILD_DIR)/mysbi.map --no-warn-rwx-segments
+else
 	@$(LD) -T $(MYSBI_DIR)/mysbi.lds --defsym $(KBUILD_CFLAGS) -o $(BUILD_DIR)/$(SBI_TARGET) $(MYSBI_OBJ_FILES) -Map $(BUILD_DIR)/mysbi.map --no-warn-rwx-segments
+endif
 	@$(RISCV_COPY) $(BUILD_DIR)/$(SBI_TARGET) -O binary $(BUILD_DIR)/$(SBI_TARGET_BIN)
 
 $(MYSBI_ENTRY_DIR)/%_s.o: $(MYSBI_ENTRY_DIR)/%.S
