Use ns16550a in mellite_defconfig
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/configs/mellite_defconfig
+++ b/configs/mellite_defconfig
@@ -65,8 +65,8 @@ CONFIG_PLIC=y
 CONFIG_TIMER=y
 CONFIG_CLINT=y
 CONFIG_UART=y
-# CONFIG_NS16550A is not set
-CONFIG_QEMU_8250=y
+CONFIG_NS16550A=y
+# CONFIG_QEMU_8250 is not set
 # CONFIG_UARTLITE is not set
 # CONFIG_PCI is not set
 # end of drivers
