Add a switch to control whether to print OS logo
Use macro CONFIG_PIRNT_LOGO to control whether
to print the OS logo,Default is enabled.

Signed-off-by: Yang Wang <wangyang@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -114,6 +114,10 @@ config ENABLE_SHELL
 	bool "Enable Shell"
 	default y
 
+config PRINT_LOGO
+	bool "Enable print logo"
+	default y
+
 config MEM_START
 	hex "Config Mem start"
 	default 0x1000000000 if SELECT_MELLITE_FPGA
