Add Support gos run on zebu env
gos runs in sram

Usage:
 ./build.sh mellite-sram

Signed-off-by: Yang Wang <yangx.wang@intel.com>
Signed-off-by: Yang Wang <wangyang@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -114,6 +114,10 @@ config ENABLE_SHELL
 	bool "Enable Shell"
 	default y
 
+config ZEBU_ENV 
+	bool "ZEBU_ENV"
+	default n
+
 config PRINT_LOGO
 	bool "Enable print logo"
 	default y
