--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -13,10 +13,12 @@ config APP_HISTORY
 config APP_IMSIC_TEST
 	bool "APP_IMSIC_TEST"
 	depends on SELECT_AIA
+	depends on AIA
 config APP_VS_IMSIC_MULTI_TEST
 	bool "APP_VS_IMSIC_MULTI_TEST"
 	depends on VIRT
 	depends on SELECT_AIA
+	depends on AIA
 config APP_LS
 	bool "APP_LS"
 config APP_MEM_READ
