--- a/configs/mellite_zebu_sram_defconfig
+++ b/configs/mellite_zebu_sram_defconfig
@@ -53,9 +53,7 @@ CONFIG_IRQCHIP=y
 #
 # aia
 #
-CONFIG_AIA=y
-CONFIG_AIA_APLIC=y
-CONFIG_AIA_IMSIC=y
+# CONFIG_AIA is not set
 # end of aia
 
 #
@@ -99,9 +97,9 @@ CONFIG_SELECT_4K_CODE_MAPPING=y
 # CONFIG_ENABLE_SVPBMT is not set
 CONFIG_ENABLE_VECTOR=y
 # CONFIG_ENABLE_ZICBOM is not set
-CONFIG_USE_UART_POLL=y
+# CONFIG_USE_UART_POLL is not set
 # CONFIG_ENABLE_MULTI_TASK is not set
 CONFIG_ENABLE_SHELL=y
 CONFIG_ZEBU_ENV=y
-CONFIG_MEM_START=0x1fff800000
 # CONFIG_PRINT_LOGO is not set
+CONFIG_MEM_START=0x1fff800000
