Update  mellite_zebu_sram_defconfig
 Add some app:stream ls mem_test devmem
 ...

Signed-off-by: Yang Wang <yangx.wang@intel.com>

--- a/configs/mellite_zebu_sram_defconfig
+++ b/configs/mellite_zebu_sram_defconfig
@@ -8,16 +8,16 @@
 #
 # CONFIG_APP_CSR_CTL is not set
 # CONFIG_APP_DEVICES is not set
-# CONFIG_APP_DEVMEM is not set
+CONFIG_APP_DEVMEM=y
 # CONFIG_APP_DMA_TEST is not set
 CONFIG_APP_HELLO=y
 # CONFIG_APP_HISTORY is not set
-# CONFIG_APP_LS is not set
+CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
 # CONFIG_APP_PLIC_SET_AFFINITY is not set
 # CONFIG_APP_SPINLOCK_TEST is not set
 # CONFIG_APP_TASK_INFO is not set
-# CONFIG_APP_STREAM is not set
+CONFIG_APP_STREAM=y
 # CONFIG_APP_HUGE_PAGE_TEST is not set
 # CONFIG_APP_TINY_TEST is not set
 # CONFIG_APP_PLANE is not set
@@ -28,7 +28,7 @@ CONFIG_APP_HELLO=y
 # CONFIG_APP_STVAL is not set
 # CONFIG_APP_CMD_LOADER is not set
 # CONFIG_APP_MEM_TESTER is not set
-# CONFIG_APP_SCAN_MEM_TEST is not set
+CONFIG_APP_SCAN_MEM_TEST=y
 # CONFIG_APP_RESV_MEM_INFO is not set
 # CONFIG_APP_SINVAL_TEST is not set
 # CONFIG_APP_ZICOND_TEST is not set
