--- a/configs/mellite_zebu_sram_defconfig
+++ b/configs/mellite_zebu_sram_defconfig
@@ -9,7 +9,7 @@
 # CONFIG_APP_CSR_CTL is not set
 # CONFIG_APP_DEVICES is not set
 CONFIG_APP_DEVMEM=y
-# CONFIG_APP_DMA_TEST is not set
+CONFIG_APP_DMA_TEST=y
 CONFIG_APP_HELLO=y
 # CONFIG_APP_HISTORY is not set
 CONFIG_APP_LS=y
@@ -45,7 +45,9 @@ CONFIG_APP_STUB_TEST=y
 #
 # drivers
 #
-# CONFIG_DMAC is not set
+CONFIG_DMAC=y
+CONFIG_DMAC_DW_AXI_DRIVER=y
+# CONFIG_DMAC_MY_PCI_DMAENGINE_DRIVER is not set
 # CONFIG_IMSIC_TEST is not set
 # CONFIG_IOMMU is not set
 CONFIG_IRQCHIP=y
