--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -121,3 +121,8 @@ config APP_INTR_TEST
 	bool "APP_INTR_TEST"
 	depends on SELECT_VCS
 	default y
+if !ENABLE_MMU && !IOMMU
+config APP_IOMMU_LIB_TEST
+	bool "APP_IOMMU_LIB_TEST"
+	default n
+endif
