Fix bug dmac_dw_axi
 1.Before starting DMA,enable dw_axi_dmac
 2.Add command lsdmac

Signed-off-by: Yang Wang <yangx.wang@intel.com>

--- a/configs/nhv3_defconfig
+++ b/configs/nhv3_defconfig
@@ -33,7 +33,7 @@ CONFIG_APP_SCAN_MEM_TEST=y
 # CONFIG_APP_SINVAL_TEST is not set
 # CONFIG_APP_ZICOND_TEST is not set
 # CONFIG_APP_HPM_TEST is not set
-# CONFIG_APP_LSDMAC is not set
+CONFIG_APP_LSDMAC=y
 CONFIG_APP_STUB_TEST=y
 # end of app
 
@@ -50,7 +50,20 @@ CONFIG_DMAC_DW_AXI_DRIVER=y
 # CONFIG_DMAC_MY_PCI_DMAENGINE_DRIVER is not set
 # CONFIG_IMSIC_TEST is not set
 # CONFIG_IOMMU is not set
-# CONFIG_IRQCHIP is not set
+CONFIG_IRQCHIP=y
+
+#
+# aia
+#
+# CONFIG_AIA is not set
+# end of aia
+
+#
+# plic
+#
+CONFIG_PLIC=y
+# end of plic
+
 CONFIG_TIMER=y
 CONFIG_CLINT=y
 CONFIG_UART=y
@@ -90,5 +103,5 @@ CONFIG_USE_UART_POLL=y
 # CONFIG_ENABLE_MULTI_TASK is not set
 CONFIG_ENABLE_SHELL=y
 # CONFIG_ZEBU_ENV is not set
-CONFIG_PRINT_LOGO=y
+# CONFIG_PRINT_LOGO is not set
 CONFIG_MEM_START=0x1fff800000
