Update zba zbb zbs zbc test and add zfh zfhmin zacas test
Signed-off-by: qinshaoqing <qinshaoqing@bosc.ac.cn>

--- a/myUser/Makefile
+++ b/myUser/Makefile
@@ -40,6 +40,10 @@ USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.c)
 USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbc/*.S)
 USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.c)
 USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zbs/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zfhmin/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zfhmin/*.S)
+USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zacas/*.c)
+USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/zacas/*.S)
 USER_COMMAND_ASM_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/vector/*.S)
 USER_COMMAND_C_FILES += $(wildcard $(MYUSER_COMMAND_DIR)/vector/*.c)
 
