Support Filesystem in ram
Now, only support ext4.

Use load_fs to load a file system.
Then, entering lsfs in shell will display all supported fs info in gos.
Enter "fs [id]" to enter the fs you want to enter.

eg.
Shell >> fs 0
Enter exit to return to Shell...
FS0:/ >> ls
lost+found               Documents                app                      bsp                      configs                  core
drivers                  entry                    fdt                      gos                      include                  init_fs
lib                      mm                       myGuest                  myUser                   mysbi                    scripts
user                     virt                     Kconfig                  Makefile                 Makefile.build           README.md
auto_run.bin             build.sh                 data.txt                 gos-mellite.lds          gos.lds                  input.dtb
pack-mellite.sh          pack.sh
FS0:// >>

Enter exit to return to the shell.

eg.
FS0:// >> exit
Shell >>
Shell >>
Shell >> ls
hello                    devices                  ls                       devmem                   history                  dma_test
mem_read                 imsic_test               imsic_test_m             imsic_test_multi         vs_imsic_multi_test      spinlock_test
vcpu_run                 vcpu_run_ext             vcpu_run_ext_at          vcpu_info                user_run                 user_run_ext
user_run_ext_at          user_info                page_tlb_test            task_info                csr_ctl                  plic_set_affinity
stream                   huge_page_test           tiny_test                get_pte_test             svnapot_test             float_test
mem_walk                 stval_test               load                     mem_tester               g_stage_test             svpbmt_test
scan_mem_test            reserved_mem_info        cbo                      prefetch                 cache

--- a/Kconfig
+++ b/Kconfig
@@ -128,6 +128,19 @@ config TASK_SCHEDULER_PERIOD
 	default "10"
 	depends on ENABLE_MULTI_TASK
 
+config ENABLE_FS
+	bool "Enable File System"
+	default y
+
+config ENABLE_INIT_FS
+	bool "Enable Init File System"
+	depends on ENABLE_FS
+	default n
+
+config INIT_FS
+	string "Init File System"
+	depends on ENABLE_INIT_FS
+
 config ENABLE_SHELL
 	bool "Enable Shell"
 	default y
