--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -58,4 +58,5 @@ obj-$(CONFIG_APP_STUB_TEST) += stub_test.o
 obj-$(CONFIG_APP_INTR_TEST) += intr_test.o
 obj-$(CONFIG_APP_IPI_TEST)  += ipi_test.o
 obj-$(CONFIG_APP_WFI_TEST)  += wfi_test.o
+obj-$(CONFIG_ENABLE_FS)     += fs/
 obj-$(CONFIG_APP_IOMMU_LIB_TEST) += iommu_lib_test/
