--- a/myGuest/Makefile
+++ b/myGuest/Makefile
@@ -50,7 +50,7 @@ MYGUEST_OBJ_FILES += $(GUEST_COMMAND_C_FILES:$(MYGUEST_COMMAND_DIR)/%.c=$(MYGUES
 
 myGuest: $(MYGUEST_OBJ_FILES)
 	@mkdir -p $(BUILD_DIR)
-	@$(LD) -T $(MYGUEST_DIR)/myGuest.lds -o $(BUILD_DIR)/$(GUEST_TARGET) $(MYGUEST_OBJ_FILES) -Map $(BUILD_DIR)/myGuest.map --no-warn-rwx-segments
+	@$(LD) -T $(MYGUEST_DIR)/myGuest.lds --defsym $(KBUILD_MYGUEST_CFLAGS) -o $(BUILD_DIR)/$(GUEST_TARGET) $(MYGUEST_OBJ_FILES) -Map $(BUILD_DIR)/myGuest.map --no-warn-rwx-segments
 	@$(RISCV_COPY) $(BUILD_DIR)/$(GUEST_TARGET) -O binary $(BUILD_DIR)/$(GUEST_TARGET_BIN)
 
 $(MYGUEST_ENTRY_DIR)/%_s.o: $(MYGUEST_ENTRY_DIR)/%.S
