Add xdma pcie rc driver
Signed-off-by: Yaxing Guo <guoyaxing@bosc.ac.cn>

--- a/drivers/pci/controller/Makefile
+++ b/drivers/pci/controller/Makefile
@@ -13,3 +13,4 @@
 # this program.  If not, see <http://www.gnu.org/licenses/>.
 
 obj-$(CONFIG_PCI) += pci_host_ecam_generic.o
+obj-$(CONFIG_PCI) += pci_host_xdma.o
