fpga_h_defconfig: Remove PCI support
Signed-off-by: Ran Wang <wangran@bosc.ac.cn>

--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -85,7 +85,7 @@ CONFIG_UART=y
 CONFIG_NS16550A=y
 CONFIG_QEMU_8250=y
 CONFIG_UARTLITE=y
-CONFIG_PCI=y
+# CONFIG_PCI is not set
 # end of drivers
 
 #
